[gd_scene load_steps=3 format=3 uid="uid://d0d3nmqg7s02x"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_0jdi1"]
[ext_resource type="Texture2D" uid="uid://cjt1sc8ja5o4i" path="res://assets/graphics/Cliff background.png" id="2_1m872"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_0jdi1")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control"]
layout_mode = 0
offset_left = 88.0
offset_top = 80.0
offset_right = 160.0
offset_bottom = 216.0

[node name="PlayButton" type="Button" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="UI/Control/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="BonusButton" type="Button" parent="UI/Control/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Bonus"

[node name="Title" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 256.0
offset_top = 24.0
offset_right = 440.0
offset_bottom = 246.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 30
text = "The day I woke up to fight gods and steal their stuff"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Parallax2D" type="Parallax2D" parent="ParallaxBackground"]
repeat_size = Vector2(0, 956)
autoscroll = Vector2(0, -25)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Parallax2D"]
position = Vector2(240, 32)
texture = ExtResource("2_1m872")

[connection signal="pressed" from="UI/Control/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="UI/Control/VBoxContainer/BonusButton" to="." method="_on_bonus_button_mouse_entered"]
[connection signal="mouse_exited" from="UI/Control/VBoxContainer/BonusButton" to="." method="_on_bonus_button_mouse_exited"]
[connection signal="pressed" from="UI/Control/VBoxContainer/BonusButton" to="." method="_on_bonus_button_pressed"]
